--- a/index2.html
+++ b/index2.html
@@ -21,16 +21,16 @@
       <div class="title">농작업 스케줄링 플랫폼</div>
       <div class="sub">더피치의 농작업 스케줄링 플랫폼입니다.</div>
       <div class="btns2">
-        <div class="adbtn3" style="width:33%;">방제단</div>
-        <a href="index2.html"><div class="adbtn4" style="width:33%;">농민</div></a>
-        <a href="index3.html"><div class="adbtn4" style="width:34%; border-radius: 0 4px 4px 0">관리자</div></a>
+        <a href="index.html"><div class="adbtn4" style="width:33%; border-radius: 4px 0 0 4px;">방제단</div></a>
+        <div class="adbtn3" style="width:33%; border-radius: 0;">농민</div>
+        <a href="index3.html"><div class="adbtn4" style="width:34%; border-radius: 0 4px 4px 0;">관리자</div></a>
       </div>
       <div class="lab">ID</div>
       <input type="text" placeholder=" 아이디를 입력해주세요." class="inp">
       <div class="lab">PASSWORD</div>
       <input type="text" placeholder=" 비밀번호를 입력해주세요." class="inp">
 
-      <a href="https://summerflight.github.io/ASP_work/"><button style="cursor:pointer;">로그인</button></a>
+      <a href="https://summerflight.github.io/ASP/"><button style="cursor:pointer;">로그인</button></a>
 
     </div>
     
